fix member and add swagger anotation
