# todo-api/swagger-play2.4/app/models/TodoModel.scala
@@ -1,22 +1,21 @@
 package models
 
-import org.joda.time.DateTime
+import io.swagger.annotations.ApiModel
 import play.api.libs.json.Json
 
+@ApiModel("Todo")
 case class Todo(
   id: Long,
   title: String,
   description: String,
-  isFinished: Boolean,
-  createTime: DateTime,
-  finishedTime: Option[DateTime]
+  isFinished: Boolean
 )
 
 object Todo {
   implicit val writes = Json.writes[Todo]
 }
 
-
+@ApiModel("TodoListResponse")
 case class TodoListResponse(
   total: Int,
   list: Seq[Todo]
@@ -26,6 +25,7 @@ object TodoListResponse {
   implicit val writes = Json.writes[TodoListResponse]
 }
 
+@ApiModel("TodoCreateForm")
 case class TodoCreateForm(
   title: String,
   description: String
@@ -35,6 +35,7 @@ object TodoCreateForm {
   implicit val reads = Json.reads[TodoCreateForm]
 }
 
+@ApiModel("TodoUpdateForm")
 case class TodoUpdateForm(
   title: String,
   description: String,
@@ -44,3 +45,8 @@ case class TodoUpdateForm(
 object TodoUpdateForm {
   implicit val reads = Json.reads[TodoUpdateForm]
 }
+
+case class SearchForm(
+  offset: Int,
+  limit: Int
+)
